GNOME Bugzilla – Bug 637060
matroskademux: errors out on 13MB blocks when streaming
Last modified: 2010-12-29 23:41:43 UTC
Hi, matroskademux cannot demux the following file in push mode: gst-launch-0.10 playbin2 uri='http://absolut.zogzog.org/k/share/[Mazui]_Katanagatari_-_12_[32DE9A50].mkv' The command fails because of the following error: matroska-demux.c:5462:gst_matroska_demux_check_read_size:<matroskademux0> error: reading large block of size 13835111 not supported; file might be corrupt. The file plays fine in pull mode.
This check exists to prevent playbin2 from doing nothing until the complete file was downloaded in push mode if the file is corrupt. It currently refuses to read blocks that are larger than 10MB Not sure if there's anything useful we could do about this
The file plays perfectly well if I remove this limit, so I guess I will use my patched version of matroskademux...
Well, the 10M limit is a bit arbitrary anyway, and was just meant as a general sanity check IIRC. May just as well increase it to 15M now that there's a file that has such large blocks. commit 3a6682908724f25f0f604fe0c5b1a8609d2325b4 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Wed Dec 29 23:38:18 2010 +0000 matroska-demux: increase allowed max. block size for push mode from 10M to 15M It was an arbitrary limit from the start, meant as a basic sanity check, so may just as well increase it a little. Would be good to provide progress reporting while completing the block in any case.. https://bugzilla.gnome.org/show_bug.cgi?id=637060