matroska-demux: increase allowed max. block size for push mode from 10M to 15M

It was an arbitrary limit from the start, meant as a basic sanity check,
so may just as well increase it a little. Would be good to provide
progress reporting while completing the block in any case..

https://bugzilla.gnome.org/show_bug.cgi?id=637060